# tvhgtk

./: README.md  channel_uuid_mapping.csv  pyproject.toml
assets/desktop/: tvhgtk  tvhgtk.desktop
scripts/: test_epg.py
src/tvhgtk/: __init__.py  app.py  application.py  config.py  drawing.py  epg_helpers.py  grid_builder.py  interactions.py  layout_helpers.py  navigation.py  types.py
